# fastapi-demo-app

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
api/: main.py  migrate_db.py
api/cruds/: done.py  task.py
api/routers/: task.py
tests/: test_main.py
